# ld-g1-sdk2

./: .gitignore  CMakeLists.txt  README.md
audio_control/: CMakeLists.txt  asr_arm_action.cpp  mic_test.cpp  play_test.cpp  tts_test.cpp
control/: CMakeLists.txt  activate.cpp  g1_arm7_sdk_dds_no_waist.cpp  set_mode.cpp
conversational/: CMakeLists.txt  conv_main.cpp
led_control/: CMakeLists.txt  led_test.cpp
